--- a/templates/proveedor/table.html.twig
+++ b/templates/proveedor/table.html.twig
@@ -14,25 +14,29 @@
 
     </script>
 
-<div class="row" style="justify-content: center;margin-top: 150px;">
-    <div class="col-lg-6" >
+    <div class="dropdown-divider"></div>
+
+    <div class="card-body">
+
+
+
         <a class="btn btn-primary" href="{{ path('new')}}">Insert New</a>
             <div class="card-body table-responsive">
                 <table class="table table-striped" id="mydatatable" style="justify-content: center">
-                    <thead>
-                        <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Correo</th>
-                        <th>Telefono</th>
-                        <th>Tipo</th>
-                        <th>Activo</th>
-                        <th>Update</th>
-                        <th>Delete</th>
+                    <thead class="table-dark">
+                        <th scope="col">ID</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Correo</th>
+                        <th scope="col">Telefono</th>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Activo</th>
+                        <th scope="col">Update</th>
+                        <th scope="col">Delete</th>
                     </thead>
                     <tbody>
                     {% for proveedor in findAll%}
                         <tr>
-                            <td>{{ proveedor.id }}</td>
+                            <th scope="row">{{ proveedor.id }}</th>
                             <td>{{ proveedor.Nombre }}</td>
                             <td>{{ proveedor.correo }}</td>
                             <td>{{ proveedor.telefono }}</td>
@@ -52,9 +56,8 @@
 
                 </table>
             </div>
-
     </div>
-</div>
+    <div class="dropdown-divider"></div>
 
 
 {% endblock %}
