--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,12 +4,12 @@
 
 {% block body %}
 
-
-<div  style="display: flex;justify-content: center;margin-top: 70px;">
+<div  style="display: flex;align-items: center;justify-content: center;margin-top: 150px;">
 
     <div class="card">
         <div class="card-body">
-            <form method="post">
+            <form method="post" class="px-4 py-3">
+                <div class="form-group">
                 {% if error %}
                     <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
@@ -28,8 +28,8 @@
                 <input type="hidden" name="_csrf_token"
                        value="{{ csrf_token('authenticate') }}"
                 >
-                    <a href="{{ path('app_register')}}" class="link-secondary">If you are not register</a>
                     <br>
+                </div>
                     <button class="btn btn-lg btn-primary" type="submit">
                         Sign in
                     </button>
@@ -50,12 +50,12 @@
 
 
             </form>
+            <div class="dropdown-divider"></div>
 
-
+            <a href="{{ path('app_register')}}" class="link-secondary">Register</a>
 
         </div>
+
     </div>
 </div>
-
-
 {% endblock %}
